Don't use "no warnings 'uninitialized'" since that is a perl 5.6+ feature and some are still using an ancient version of perl.

--- a/tbsetup/os_setup.in
+++ b/tbsetup/os_setup.in
@@ -1214,7 +1214,7 @@ foreach ((keys %nodes), (keys %vnodes), (keys %plabvnodes)) {
 }
 
 sub list_failed_nodes ($%) {
-    no warnings 'uninitialized';
+    local $^W = 0;
     my ($max_length,%d) = @_;
     my $byvname = sub { $vname{$a} cmp $vname{$b} };
     my @nodes = (sort $byvname @{$d{failed_fatal_list}}, 
@@ -1247,7 +1247,7 @@ sub add_failed_nodes ($$%) {
 
 foreach my $osid (sort keys %total_osid) {
     # I want undefined to mean zero!
-    no warnings 'uninitialized';
+    local $^W = 0;
 
     my ($osname, $pidofosid);
     my $user_image = 1;
