Prep for Mike Kasick report code.  Updated database schema and installed hooks for his code.
Cleaned up how errors were handled in tblog(...).

Allow SENDMAIL to be called before the path is untained in '-T' scripts.

Other small changes.

--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -4664,11 +4664,11 @@ sub DBWarn($;$)
 #
 # usage: DBFatal(char *message);
 #
-sub DBFatal($)
+sub DBFatal($;$)
 {
-    my($message) = $_[0];
+    my($message,$nomail) = $_[0];
     
-    DBError(\&tbdie, $message);
+    DBError(\&tbdie, $message, $nomail);
 }
 
 #
